@@ -14,6 +14,7 @@ src/rig-data.c
 src/rig-gui-buttons.c
 src/rig-gui.c
 src/rig-gui-ctrl2.c
+src/rig-gui-func.c
 src/rig-gui-info.c
 src/rig-gui-lcd.c
 src/rig-gui-levels.c
